playbook api 支持 dir 隔离
